--- a/P-project/개인적인 프로젝트.html
+++ b/P-project/개인적인 프로젝트.html
@@ -39,19 +39,17 @@
         </div>
     </header> 
 
-    <div class="top-info">
-
-
-
-
-
-
-
-
-        <h1 class="top_info" style="padding: 200px 0 30px 0; font-size: 3em;">마왕잡는 매니저의 영웅들</h1>
-        <p class="top_info" style="font-size: 1.3em;">마왕잡는 매니저에는 10가지의 다양한 직업이 존재하며<br></p>
-        <p class="top_info" style="font-size: 1.3em;">각기 고유 능력을 보유하고 있습니다.아래 설명을 참고하세요.<p>
-
+    <div class="top-info" style="position: fixed;">
+        <div class="top-info-menu">
+            <div id="logo-fix" style="width: 100%; height: 100%; text-align: center; position: absolute;">
+                <a href="#"><img class="center-logo" src="중앙 로고 3.png" style="height: 130px; width: 130px;"></a>
+            </div>
+        </div>
+        <div class="info-text" style="z-index: 9999;">
+            <h1 class="top_info" style="padding: 10px 0 30px 0; font-size: 3em;">마왕잡는 매니저의 영웅들</h1>
+            <p class="top_info" style="font-size: 1.3em;">마왕잡는 매니저에는 10가지의 다양한 직업이 존재하며<br></p>
+            <p class="top_info" style="font-size: 1.3em;">각기 고유 능력을 보유하고 있습니다.아래 설명을 참고하세요.<p>
+        </div>
     </div>
 </body>
 </html>
