--- a/P-project/개인적인 프로젝트.html
+++ b/P-project/개인적인 프로젝트.html
@@ -7,11 +7,14 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Song+Myung&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@600&display=swap');
+        @import url('https://fonts.googleapis.com/css2?family=Song+Myung&display=swap');
+
         .top_infoT{
             text-align: center;         
             font-weight: bolder;
             font-family: 'Song Myung', serif;
             color: white;
+            font-size: x-large;
         }
     </style>
 </head>
@@ -21,11 +24,7 @@
             <a href="#"><img class="logo" src="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\개인 프로젝트\img\마왕잡는 매니저.png" style="height: 40px; width: 100px;"></a>
             <nav>
                 <ul class="topmenu">
-                    <li><a href="#" 
-                        onmouseover="this.innerHTML='게임 ∧'"
-                        onmouseout="this.innerHTML='게임 ∨'" >
-                        게임 ∨
-                    </a>
+                    <li class="dropdown1"><a href="#"> 게임 </a>
                         <ul class="submenu1">
                             <li><a href="" style="color: #C4A13B;">마왕잡는매니저</a></li>
                             <li><a href="" style="color: #C4A13B;">submenu</a></li>
@@ -42,10 +41,10 @@
 
     <div class="top-info">
         <div class="top-info-menu">  
-            <a href="#"><h1 class="top-info-h1">logo</h1></a>
+            <a href="#"><h1 class="top-info-h1" style="font-family: 'Song Myung', serif;">마왕잡는 매니저</h1></a>
            <nav>
                 <ul class="bodymenu" >                   
-                    <li><a href="#">게임 </a>
+                    <li class="dropdown2"><a href="#">게임 </a>
                         <ul class="info-sub-menu">
                             <li><a href="">마왕잡는 매니저는 무엇인가요?</a> </li>
                             <li><a href="">플레이 방법</a></li>
@@ -54,7 +53,7 @@
                         </ul>
                     </li>
                     
-                    <li><a href="#">카드 </a>
+                    <li class="dropdown2"><a href="#">카드 </a>
                         <ul class="info-sub-menu">
                             <li><a href="">카드 종류</a></li>
                             <li><a href="">전장</a></li>
@@ -62,7 +61,7 @@
                         </ul>
                     </li>
 
-                    <li><a href="#">커뮤니티</a>
+                    <li class="dropdown2"><a href="#">커뮤니티</a>
                         <ul class="info-sub-menu">
                             <li><a href="">Q&A</a></li>
                             <li><a href="">문의</a></li>
@@ -70,18 +69,18 @@
                         </ul>
                     </li>
                        
-                    <li><a href="#">새소식 </a>
+                    <li class="dropdown2"><a href="#">새소식 </a>
                         <ul class="info-sub-menu">
                             <li><a href="">패치 노트</a></li>
                             <li><a href="">이벤트</a></li>
                             <li><a href="">개발자</a></li>
                         </ul>
                     </li>
-                    <li style=" margin-right: 500px; "><a href="#">E스포츠</a></li>                
+                    <li style=" margin-right: 500px;"><a href="#">E스포츠</a></li>                
             </nav>                          
         </div>
         <div class="info-text" style="z-index: 9999;">
-            <h1 class="top_infoT" style="padding: 130px 0 30px 0; font-size: 3em;">마왕잡는 매니저의 영웅들</h1>
+            <h1 class="top_infoT" style="padding: 190px 0 30px 0px; font-size: 3em;">마왕잡는 매니저의 영웅들</h1>
             <p class="top_infoT" style="font-size: 1.3em;">마왕잡는 매니저에는 10가지의 다양한 직업이 존재하며<br></p>
             <p class="top_infoT" style="font-size: 1.3em;">각기 고유 능력을 보유하고 있습니다.아래 설명을 참고하세요.<p>
         </div>
