--- a/P-project/개인적인 프로젝트.html
+++ b/P-project/개인적인 프로젝트.html
@@ -79,12 +79,28 @@
                     <li style=" margin-right: 500px;"><a href="#">E스포츠</a></li>                
             </nav>                          
         </div>
-        <div class="info-text" style="z-index: 9999;">
+        <div class="info-text" style="z-index: 9995;">
             <h1 class="top_infoT" style="padding: 190px 0 30px 0px; font-size: 3em;">마왕잡는 매니저의 영웅들</h1>
             <p class="top_infoT" style="font-size: 1.3em;">마왕잡는 매니저에는 10가지의 다양한 직업이 존재하며<br></p>
             <p class="top_infoT" style="font-size: 1.3em;">각기 고유 능력을 보유하고 있습니다.아래 설명을 참고하세요.<p>
         </div>
         
+    </div>
+    <div id="contents">
+        <table id="card_table">
+            <tr>
+                <td><img src="card1.jpg"></td>
+                <td><img src="card2.jpg"></td>
+                <td><img src="card3.jpg"></td>
+                <td><img src="card4.jpg"></td>
+            </tr>
+            <tr>
+                <td><img src="card5.jpg"></td>
+                <td><img src="card6.jpg"></td>
+                <td><img src="card7.jpg"></td>
+                <td><img src="card8.jpg"></td>
+            </tr>
+        </table>
     </div>
 </body>
 </html>
