--- a/P-project/개인적인 프로젝트.html
+++ b/P-project/개인적인 프로젝트.html
@@ -2,10 +2,12 @@
 <html lang="ko">
 <head>
     <meta charset="UTF-8">
-    <title>영웅 - 마왕잡는 매니저</title>
+    <title>마왕잡는 매니저 - 영웅</title>
     <link rel="stylesheet" href="style.css">
     <style>
-        @import url('https://fonts.googleapis.com/css2?family=Song+Myung&display=swap');
+
+        /* @import url('https://fonts.googleapis.com/css2?family=Song+Myung&display=swap'); */
+        @import url('https://fonts.googleapis.com/css2?family=Do+Hyeon&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+KR:wght@600&display=swap');
         @import url('https://fonts.googleapis.com/css2?family=Song+Myung&display=swap');
 
@@ -41,7 +43,7 @@
 
     <div class="top-info">
         <div class="top-info-menu">  
-            <a href="#"><h1 class="top-info-h1" style="font-family: 'Song Myung', serif;">마왕잡는 매니저</h1></a>
+            <a href="#"><h1 class="top-info-h1" style="font-family: 'Do Hyeon', sans-serif;">마왕잡는 매니저</h1></a>
            <nav>
                 <ul class="bodymenu" >                   
                     <li class="dropdown2"><a href="#">게임 </a>
@@ -89,16 +91,20 @@
     <div id="contents">
         <table id="card_table">
             <tr>
-                <td><img src="card1.jpg"></td>
-                <td><img src="card2.jpg"></td>
-                <td><img src="card3.jpg"></td>
-                <td><img src="card4.jpg"></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="검객.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="격투가.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="기사.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="방패병.png"></a></td>
             </tr>
             <tr>
-                <td><img src="card5.jpg"></td>
-                <td><img src="card6.jpg"></td>
-                <td><img src="card7.jpg"></td>
-                <td><img src="card8.jpg"></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="마법사.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="발명가.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="사격수.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="사제.png"></a></td>
+            </tr>
+            <tr>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="전사.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="암살자.png"></a></td>
             </tr>
         </table>
     </div>
