--- a/202_programming/04_09 과제.html
+++ b/202_programming/04_09 과제.html
@@ -6,6 +6,7 @@
     <style>
         .title{
             background-color: blueviolet;
+            list-style-type: circle
         }
         .roman_up{
             list-style-type: upper-roman;
@@ -29,7 +30,7 @@
 
 </head>
 <body>
-    <ul class="title" style="list-style-type: circle;">
+    <ul class="title">
         <h2><li>과제 제출</li></h2>
     </ul>
 
