웹페이지 main_header 작업 완료

--- a/자율동아리/카드 설명창.html
+++ b/자율동아리/카드 설명창.html
@@ -25,6 +25,20 @@
                 </li>
             </ul>
         </header>
+        <!-- 메인 -->
+        <main id="main">
+            <!-- 콘텐츠 설명 부분 -->
+            <div id="main_header">
+                <img src="img/logo.png" alt="로고 불러오는 중">
+                <h2>카드 소개</h2>
+                <p>마왕잡는 매니저의 카드는 ~~~~~~~~~~~~~~~~~~~~~~~~<br>
+                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
+            </div>
+            <!-- 카드 설명 부분 -->
+            <div class="card_info">
+                
+            </div>
+        </main>
         <!-- 푸터 -->
         <footer id="footer">
             <div class="footer_inner">
