카드 위치 임시 이미지 삽입 콘텐츠 부분 위치 지정

--- a/자율동아리/카드 설명창.html
+++ b/자율동아리/카드 설명창.html
@@ -34,9 +34,11 @@
                 <p>마왕잡는 매니저의 카드는 ~~~~~~~~~~~~~~~~~~~~~~~~<br>
                     ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
             </div>
-            <!-- 카드 설명 부분 -->
-            <div class="card_info">
-                
+            <!-- 콘텐츠 부분 -->
+            <div id="card_info">
+                <img src="img/Assassin001.png" alt="http://placehold.it/150x150" style="width: 200px; height: 250px;"/>
+                <img src="img/Beasthunter.png" alt="http://placehold.it/150x150" style="width: 200px; height: 250px;"/>
+                <img src="http://placehold.it/200x250" />
             </div>
         </main>
         <!-- 푸터 -->
