카드 hover 효과 추가 카드 하단 설명 추가

--- a/P-project/개인적인 프로젝트.html
+++ b/P-project/개인적인 프로젝트.html
@@ -91,10 +91,10 @@
     <div id="contents">
         <table id="card_table">
             <tr>
-                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="검객.png"></a></td>
-                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="격투가.png"></a></td>
-                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="기사.png"></a></td>
-                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="방패병.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="Wizard.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="Wizard.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="Wizard.png"></a></td>
+                <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="Wizard.png"></a></td>
             </tr>
             <tr>
                 <td><a href="C:\Users\mythe\Desktop\1학기 프로그래밍 웹\HTMl\P-project\영웅소개페이지\검객.html"><img src="마법사.png"></a></td>
