--- a/자율동아리/카드 설명창.html
+++ b/자율동아리/카드 설명창.html
@@ -31,14 +31,95 @@
             <div id="main_header">
                 <img src="img/logo.png" alt="로고 불러오는 중">
                 <h2>카드 소개</h2>
-                <p>마왕잡는 매니저의 카드는 ~~~~~~~~~~~~~~~~~~~~~~~~<br>
-                    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~</p>
+                <p>마왕잡는 매니저의 용사카드는 10가지 직업 중 하나를 가지며<br>
+                    각 직업마다 고유한 스킬(패시브)를 가집니다.</p>
             </div>
             <!-- 콘텐츠 부분 -->
             <div id="card_info">
-                <img src="img/Assassin001.png" alt="http://placehold.it/150x150" style="width: 200px; height: 250px;"/>
-                <img src="img/Beasthunter.png" alt="http://placehold.it/150x150" style="width: 200px; height: 250px;"/>
-                <img src="http://placehold.it/200x250" />
+                <div id="Assassin_info">
+                    <a href="#"><img src="img/Assassin001.png" alt="http://placehold.it/200x250" id="img1"/></a>
+                    <div id="info_text">
+                        <p>어쌔신</p>
+                    </div>
+                </div>
+
+                <div id="BeastHunter_info">
+                    <a href="#"><img src="img/BeastHunter.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>헌터</p>
+                    </div>
+                </div>
+
+                <div id="Fighter_info">
+                    <a href="#"><img src="img/Fighter.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>파이터</p>
+                    </div>
+                </div>
+
+                <div id="FireMage_info">
+                    <a href="#"><img src="img/FireMage.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>파이어메이지</p>
+                    </div>
+                </div>
+
+                <div id="Hammer_info">
+                    <a href="#"><img src="img/Hammer.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>해머</p>
+                    </div>
+                </div>
+
+                <div id="HighPriest_info">
+                    <a href="#"><img src="img/HighPriest.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>대제사장</p>
+                    </div>
+                </div>
+
+                <div id="Lancer_info">
+                    <a href="#"><img src="img/Lancer.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>랜서</p>
+                    </div>
+                </div>
+
+                <div id="Outlaw_info">
+                    <a href="#"><img src="img/Outlaw.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>아웃로우</p>
+                    </div>
+                </div>
+
+                <div id="Priest_info">
+                    <a href="#"><img src="img/Priest.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>프리스트</p>
+                    </div>
+                </div>
+
+                <div id="Shielder_info">
+                    <a href="#"><img src="img/Shielder.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>방패병</p>
+                    </div>
+                </div>
+
+                <div id="SwordMan_info">
+                    <a href="#"><img src="img/SwordMan.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>검사</p>
+                    </div>
+                </div>
+
+                <div id="Wizard_info">
+                    <a href="#"><img src="img/Wizard.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>마법사</p>
+                    </div>
+                </div>
+
             </div>
         </main>
         <!-- 푸터 -->
@@ -127,7 +208,7 @@
                     <span>사업자등록번호 : 사업자 등록번호?</span>
                     <span>통신판매업 신고번호 : 음.....</span>
                     <a href="#">
-                         <span>상일미디어고등학교 홈페이지</span></a>
+                        <span>상일미디어고등학교 홈페이지</span></a>
                 </address>
                 <p class="copylight">© Sangil-Media-HighSchool.</p>
                 <a href="#">
