Dr,Knight 카드 추가,카드 hover 효과 수정

--- a/자율동아리/카드 설명창.html
+++ b/자율동아리/카드 설명창.html
@@ -50,6 +50,20 @@
                     </div>
                 </div>
 
+                <div id="BraveHeart_info">
+                    <a href="#"><img src="img/BraveHeart.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>전사</p>
+                    </div>
+                </div>
+
+                <div id="Dr_info">
+                    <a href="#"><img src="img/Dr.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>연구원</p>
+                    </div>
+                </div>
+
                 <div id="Fighter_info">
                     <a href="#"><img src="img/Fighter.png" alt="http://placehold.it/200x250"/></a>
                     <div id="info_text">
@@ -75,6 +89,13 @@
                     <a href="#"><img src="img/HighPriest.png" alt="http://placehold.it/200x250"/></a>
                     <div id="info_text">
                         <p>대제사장</p>
+                    </div>
+                </div>
+
+                <div id="Knight_info">
+                    <a href="#"><img src="img/Knight.png" alt="http://placehold.it/200x250"/></a>
+                    <div id="info_text">
+                        <p>나이트</p>
                     </div>
                 </div>
 
