--- a/자율동아리/카드 설명창.html
+++ b/자율동아리/카드 설명창.html
@@ -32,116 +32,140 @@
                 <img src="img/logo.png" alt="로고 불러오는 중">
                 <h2>카드 소개</h2>
                 <p>마왕잡는 매니저의 용사카드는 10가지 직업 중 하나를 가지며<br>
-                    각 직업마다 고유한 스킬(패시브)를 가집니다.</p>
+                    각 직업마다 고유한 스킬(패시브)을 가집니다.</p>
             </div>
             <!-- 콘텐츠 부분 -->
             <div id="card_info">
-                <div id="Assassin_info">
-                    <a href="#"><img src="img/Assassin001.png" alt="http://placehold.it/200x250" id="img1"/></a>
-                    <div id="info_text">
-                        <p>어쌔신</p>
+                <div id="border_div">
+                    <!-- 등급 카테고리 -->
+                    <ul id="category_Tap">
+                        <li class="all">
+                            <a href="#none">전체</a>
+                        </li>
+                        <li class="nomal">
+                            <a href="#none">평범한</a>
+                        </li>
+                        <li class="special">
+                            <a href="#none">특별한</a>
+                        </li>
+                        <li class="great">
+                            <a href="#none">위대한</a>
+                        </li>
+                        <li class="legendary">
+                            <a href="#none">전설적인</a>
+                        </li>
+                    </ul>
+                    <hr id="One">
+                    <!-- 등급 설명 영역 -->
+                    <div id="rank_info" style="border-bottom: 1px dashed black;">
+                        <h1 style="font-weight: bold; text-align: center; color: aqua; font-size: 50px ;">등급 설명 부분입니다.</h1>
+                    </div>
+
+                    <div id="Assassin_info">
+                        <a href="#"><img src="img/Assassin001.png" alt="http://placehold.it/200x250" id="img1"/></a>
+                        <div id="info_text">
+                            <p>암살자</p>
+                        </div>
+                    </div>
+
+                    <div id="BeastHunter_info">
+                        <a href="#"><img src="img/BeastHunter.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>사냥꾼</p>
+                        </div>
+                    </div>
+
+                    <div id="BraveHeart_info">
+                        <a href="#"><img src="img/BraveHeart.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>전사</p>
+                        </div>
+                    </div>
+
+                    <div id="Dr_info">
+                        <a href="#"><img src="img/Dr.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>발명가</p>
+                        </div>
+                    </div>
+
+                    <div id="Fighter_info">
+                        <a href="#"><img src="img/Fighter.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>무도가</p>
+                        </div>
+                    </div>
+
+                    <div id="FireMage_info">
+                        <a href="#"><img src="img/FireMage.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>화염 마법사</p>
+                        </div>
+                    </div>
+
+                    <div id="Hammer_info">
+                        <a href="#"><img src="img/Hammer.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>해머</p>
+                        </div>
+                    </div>
+
+                    <div id="HighPriest_info">
+                        <a href="#"><img src="img/HighPriest.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>고위성직자</p>
+                        </div>
+                    </div>
+
+                    <div id="Knight_info">
+                        <a href="#"><img src="img/Knight.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>기사</p>
+                        </div>
+                    </div>
+
+                    <div id="Lancer_info">
+                        <a href="#"><img src="img/Lancer.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>창기병</p>
+                        </div>
+                    </div>
+
+                    <div id="Outlaw_info">
+                        <a href="#"><img src="img/Outlaw.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>석양의 무법자</p>
+                        </div>
+                    </div>
+
+                    <div id="Priest_info">
+                        <a href="#"><img src="img/Priest.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>수녀</p>
+                        </div>
+                    </div>
+
+                    <div id="Shielder_info">
+                        <a href="#"><img src="img/Shielder.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>방패병</p>
+                        </div>
+                    </div>
+
+                    <div id="SwordMan_info">
+                        <a href="#"><img src="img/SwordMan.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>검사</p>
+                        </div>
+                    </div>
+
+                    <div id="Wizard_info">
+                        <a href="#"><img src="img/Wizard.png" alt="http://placehold.it/200x250"/></a>
+                        <div id="info_text">
+                            <p>깨우친 현자</p>
+                        </div>
                     </div>
                 </div>
-                
-
-                <div id="BeastHunter_info">
-                    <a href="#"><img src="img/BeastHunter.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>헌터</p>
-                    </div>
-                </div>
-
-                <div id="BraveHeart_info">
-                    <a href="#"><img src="img/BraveHeart.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>전사</p>
-                    </div>
-                </div>
-
-                <div id="Dr_info">
-                    <a href="#"><img src="img/Dr.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>연구원</p>
-                    </div>
-                </div>
-
-                <div id="Fighter_info">
-                    <a href="#"><img src="img/Fighter.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>파이터</p>
-                    </div>
-                </div>
-
-                <div id="FireMage_info">
-                    <a href="#"><img src="img/FireMage.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>파이어메이지</p>
-                    </div>
-                </div>
-
-                <div id="Hammer_info">
-                    <a href="#"><img src="img/Hammer.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>해머</p>
-                    </div>
-                </div>
-
-                <div id="HighPriest_info">
-                    <a href="#"><img src="img/HighPriest.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>대제사장</p>
-                    </div>
-                </div>
-
-                <div id="Knight_info">
-                    <a href="#"><img src="img/Knight.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>나이트</p>
-                    </div>
-                </div>
-
-                <div id="Lancer_info">
-                    <a href="#"><img src="img/Lancer.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>랜서</p>
-                    </div>
-                </div>
-
-                <div id="Outlaw_info">
-                    <a href="#"><img src="img/Outlaw.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>아웃로우</p>
-                    </div>
-                </div>
-
-                <div id="Priest_info">
-                    <a href="#"><img src="img/Priest.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>프리스트</p>
-                    </div>
-                </div>
-
-                <div id="Shielder_info">
-                    <a href="#"><img src="img/Shielder.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>방패병</p>
-                    </div>
-                </div>
-
-                <div id="SwordMan_info">
-                    <a href="#"><img src="img/SwordMan.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>검사</p>
-                    </div>
-                </div>
-
-                <div id="Wizard_info">
-                    <a href="#"><img src="img/Wizard.png" alt="http://placehold.it/200x250"/></a>
-                    <div id="info_text">
-                        <p>마법사</p>
-                    </div>
-                </div>
-
             </div>
         </main>
         <!-- 푸터 -->
