본문영역 배경 컬러 전체 변경,카드소개 아래 설명 디자인 변경,카드 소개 글꼴 변경

--- a/자율동아리/카드 설명창.html
+++ b/자율동아리/카드 설명창.html
@@ -29,16 +29,22 @@
         <main id="main">
             <!-- 콘텐츠 설명 부분 -->
             <div id="main_header">
-                <img src="img/logo.png" alt="로고 불러오는 중">
+                <img src="img/logo.png" alt="로고 불러오는 중" id="logo">
                 <h2>카드 소개</h2>
-                <p>마왕잡는 매니저의 용사카드는 10가지 직업 중 하나를 가지며<br>
-                    각 직업마다 고유한 스킬(패시브)을 가집니다.</p>
+                <img src="img/테스트.png" alt="카드 설명" id="Test">
+                <!-- <p>마왕잡는 매니저의 용사카드는 10가지 직업 중 하나를 가지며<br>
+                    각 직업마다 고유한 스킬(패시브)을 가집니다.</p> -->
             </div>
             <!-- 콘텐츠 부분 -->
             <div id="card_info">
                 <div id="border_div">
-                    <!-- 등급 카테고리 -->
-                    <ul id="category_Tap">
+                    <!-- 등급 설명 영역 -->
+                    <div id="rank_info">
+                        <h1>등급 설명 부분입니다.</h1>
+                    </div>
+                    
+                     <!-- 등급 카테고리 -->
+                     <ul id="category_Tap">
                         <li class="all">
                             <a href="#none">전체</a>
                         </li>
@@ -55,12 +61,7 @@
                             <a href="#none">전설적인</a>
                         </li>
                     </ul>
-                    <hr id="One">
-                    <!-- 등급 설명 영역 -->
-                    <div id="rank_info" style="border-bottom: 1px dashed black;">
-                        <h1 style="font-weight: bold; text-align: center; color: aqua; font-size: 50px ;">등급 설명 부분입니다.</h1>
-                    </div>
-
+                    <!-- <hr id="One"> -->
                     <div id="Assassin_info">
                         <a href="#"><img src="img/Assassin001.png" alt="http://placehold.it/200x250" id="img1"/></a>
                         <div id="info_text">
