--- a/자율동아리/카드 설명창.html
+++ b/자율동아리/카드 설명창.html
@@ -39,7 +39,7 @@
                 <div id="border_div">
                     <!-- 등급 설명 영역 -->
                     <div id="rank_info">
-                        <h1>등급 설명 부분입니다.</h1>
+                        <img src="img/Rank_info_img.png" alt="등급설명 이미지" id="rank_img">
                     </div>
                     <hr id="One">
                     <div id="Assassin_info">
